force-app/main/default/objects/RECommunityUsersConfiguration__mdt/RECommunityUsersConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>RE Community Users Configuration</label>
    <pluralLabel>RE Community Users Configurations</pluralLabel>
</CustomObject>