force-app/main/default/objects/RECommunityUsersConfiguration__mdt/fields/AllowIntegrationforUserCreation__c.field-meta.xml
<CustomField>
    <fullName>AllowIntegrationforUserCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Integration for User Creation?</label>
    <type>Checkbox</type>
</CustomField>