force-app/main/default/objects/RECommunityUsersConfiguration__mdt/fields/PermissionSets__c.field-meta.xml
<CustomField>
    <fullName>PermissionSets__c</fullName>
    <label>Permission Sets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>