force-app/main/default/objects/RECommunityUsersConfiguration__mdt/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Admin</fullName>
                
                    <default>true</default>
                
                    <label>Admin</label>
                
                </value>
            
                <value>
                
                    <fullName>Staff</fullName>
                
                
                    <label>Staff</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>