force-app/main/default/objects/RECommunityUsersConfiguration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PermissionSets__c</columns>
    <columns>ProfileName__c</columns>
    <columns>AllowIntegrationforUserCreation__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>